Proyecto/sintactico.output
Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 ID LPAREN DPAREN LEFTKEY declarations statement_list RIGHTKEY

    3 $@2: ε

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON

    5 $@3: ε

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON
    7             | ε

    8 identifier_list: identifier
    9                | identifier_list COMMA identifier
   10                | ε

   11 identifier: ID
   12           | ID ASSIGNOP expression

   13 statement_list: statement_list statement
   14               | ε

   15 statement: ID ASSIGNOP expression SEMICOLON
   16          | LEFTKEY statement_list RIGHTKEY
   17          | IF LPAREN expression DPAREN statement ELSE statement
   18          | IF LPAREN expression DPAREN statement
   19          | WHILE LPAREN expression DPAREN statement
   20          | PRINT LPAREN print_list DPAREN SEMICOLON
   21          | READ LPAREN read_list DPAREN SEMICOLON

   22 print_list: print_item
   23           | print_list COMMA print_item

   24 print_item: expression
   25           | STRING

   26 read_list: ID
   27          | read_list COMMA ID

   28 expression: expression PLUSOP expression
   29           | expression MINUSOP expression
   30           | expression MULTIPLICATION expression
   31           | expression DIVISION expression
   32           | MINUSOP expression
   33           | LPAREN expression DPAREN
   34           | ID
   35           | INTLITERAL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LPAREN (258) 2 17 18 19 20 21 33
    DPAREN (259) 2 17 18 19 20 21 33
    LEFTKEY (260) 2 16
    RIGHTKEY (261) 2 16
    VAR (262) 4
    CONST (263) 6
    COMMA (264) 9 23 27
    ASSIGNOP (265) 12 15
    SEMICOLON (266) 4 6 15 20 21
    WHILE (267) 19
    PRINT (268) 20
    READ (269) 21
    MINUS (270)
    MINUSOP (271) 29 32
    MULTIPLICATION (272) 30
    DIVISION (273) 31
    PLUSOP (274) 28
    IF (275) 17 18
    ELSE (276) 17
    INTLITERAL <lexema> (277) 35
    STRING <lexema> (278) 25
    ID <lexema> (279) 2 11 12 15 26 27 34
    NO_ELSE (280)


Nonterminals, with rules where they appear

    $accept (26)
        on left: 0
    program (27)
        on left: 2
        on right: 0
    $@1 (28)
        on left: 1
        on right: 2
    declarations (29)
        on left: 4 6 7
        on right: 2 4 6
    $@2 (30)
        on left: 3
        on right: 4
    $@3 (31)
        on left: 5
        on right: 6
    identifier_list (32)
        on left: 8 9 10
        on right: 4 6 9
    identifier (33)
        on left: 11 12
        on right: 8 9
    statement_list (34)
        on left: 13 14
        on right: 2 13 16
    statement (35)
        on left: 15 16 17 18 19 20 21
        on right: 13 17 18 19
    print_list (36)
        on left: 22 23
        on right: 20 23
    print_item (37)
        on left: 24 25
        on right: 22 23
    read_list (38)
        on left: 26 27
        on right: 21 27
    expression <codigo> (39)
        on left: 28 29 30 31 32 33 34 35
        on right: 12 15 17 18 19 24 28 29 30 31 32 33


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • ID LPAREN DPAREN LEFTKEY declarations statement_list RIGHTKEY

    ID  shift, and go to state 4


State 3

    0 $accept: program $end •

    $default  accept


State 4

    2 program: $@1 ID • LPAREN DPAREN LEFTKEY declarations statement_list RIGHTKEY

    LPAREN  shift, and go to state 5


State 5

    2 program: $@1 ID LPAREN • DPAREN LEFTKEY declarations statement_list RIGHTKEY

    DPAREN  shift, and go to state 6


State 6

    2 program: $@1 ID LPAREN DPAREN • LEFTKEY declarations statement_list RIGHTKEY

    LEFTKEY  shift, and go to state 7


State 7

    2 program: $@1 ID LPAREN DPAREN LEFTKEY • declarations statement_list RIGHTKEY

    $default  reduce using rule 7 (declarations)

    declarations  go to state 8


State 8

    2 program: $@1 ID LPAREN DPAREN LEFTKEY declarations • statement_list RIGHTKEY
    4 declarations: declarations • VAR $@2 identifier_list SEMICOLON
    6             | declarations • CONST $@3 identifier_list SEMICOLON

    VAR    shift, and go to state 9
    CONST  shift, and go to state 10

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 11


State 9

    4 declarations: declarations VAR • $@2 identifier_list SEMICOLON

    $default  reduce using rule 3 ($@2)

    $@2  go to state 12


State 10

    6 declarations: declarations CONST • $@3 identifier_list SEMICOLON

    $default  reduce using rule 5 ($@3)

    $@3  go to state 13


State 11

    2 program: $@1 ID LPAREN DPAREN LEFTKEY declarations statement_list • RIGHTKEY
   13 statement_list: statement_list • statement

    LEFTKEY   shift, and go to state 14
    RIGHTKEY  shift, and go to state 15
    WHILE     shift, and go to state 16
    PRINT     shift, and go to state 17
    READ      shift, and go to state 18
    IF        shift, and go to state 19
    ID        shift, and go to state 20

    statement  go to state 21


State 12

    4 declarations: declarations VAR $@2 • identifier_list SEMICOLON

    ID  shift, and go to state 22

    $default  reduce using rule 10 (identifier_list)

    identifier_list  go to state 23
    identifier       go to state 24


State 13

    6 declarations: declarations CONST $@3 • identifier_list SEMICOLON

    ID  shift, and go to state 22

    $default  reduce using rule 10 (identifier_list)

    identifier_list  go to state 25
    identifier       go to state 24


State 14

   16 statement: LEFTKEY • statement_list RIGHTKEY

    $default  reduce using rule 14 (statement_list)

    statement_list  go to state 26


State 15

    2 program: $@1 ID LPAREN DPAREN LEFTKEY declarations statement_list RIGHTKEY •

    $default  reduce using rule 2 (program)


State 16

   19 statement: WHILE • LPAREN expression DPAREN statement

    LPAREN  shift, and go to state 27


State 17

   20 statement: PRINT • LPAREN print_list DPAREN SEMICOLON

    LPAREN  shift, and go to state 28


State 18

   21 statement: READ • LPAREN read_list DPAREN SEMICOLON

    LPAREN  shift, and go to state 29


State 19

   17 statement: IF • LPAREN expression DPAREN statement ELSE statement
   18          | IF • LPAREN expression DPAREN statement

    LPAREN  shift, and go to state 30


State 20

   15 statement: ID • ASSIGNOP expression SEMICOLON

    ASSIGNOP  shift, and go to state 31


State 21

   13 statement_list: statement_list statement •

    $default  reduce using rule 13 (statement_list)


State 22

   11 identifier: ID •
   12           | ID • ASSIGNOP expression

    ASSIGNOP  shift, and go to state 32

    $default  reduce using rule 11 (identifier)


State 23

    4 declarations: declarations VAR $@2 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMMA identifier

    COMMA      shift, and go to state 33
    SEMICOLON  shift, and go to state 34


State 24

    8 identifier_list: identifier •

    $default  reduce using rule 8 (identifier_list)


State 25

    6 declarations: declarations CONST $@3 identifier_list • SEMICOLON
    9 identifier_list: identifier_list • COMMA identifier

    COMMA      shift, and go to state 33
    SEMICOLON  shift, and go to state 35


State 26

   13 statement_list: statement_list • statement
   16 statement: LEFTKEY statement_list • RIGHTKEY

    LEFTKEY   shift, and go to state 14
    RIGHTKEY  shift, and go to state 36
    WHILE     shift, and go to state 16
    PRINT     shift, and go to state 17
    READ      shift, and go to state 18
    IF        shift, and go to state 19
    ID        shift, and go to state 20

    statement  go to state 21


State 27

   19 statement: WHILE LPAREN • expression DPAREN statement

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 41


State 28

   20 statement: PRINT LPAREN • print_list DPAREN SEMICOLON

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    STRING      shift, and go to state 42
    ID          shift, and go to state 40

    print_list  go to state 43
    print_item  go to state 44
    expression  go to state 45


State 29

   21 statement: READ LPAREN • read_list DPAREN SEMICOLON

    ID  shift, and go to state 46

    read_list  go to state 47


State 30

   17 statement: IF LPAREN • expression DPAREN statement ELSE statement
   18          | IF LPAREN • expression DPAREN statement

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 48


State 31

   15 statement: ID ASSIGNOP • expression SEMICOLON

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 49


State 32

   12 identifier: ID ASSIGNOP • expression

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 50


State 33

    9 identifier_list: identifier_list COMMA • identifier

    ID  shift, and go to state 22

    identifier  go to state 51


State 34

    4 declarations: declarations VAR $@2 identifier_list SEMICOLON •

    $default  reduce using rule 4 (declarations)


State 35

    6 declarations: declarations CONST $@3 identifier_list SEMICOLON •

    $default  reduce using rule 6 (declarations)


State 36

   16 statement: LEFTKEY statement_list RIGHTKEY •

    $default  reduce using rule 16 (statement)


State 37

   33 expression: LPAREN • expression DPAREN

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 52


State 38

   32 expression: MINUSOP • expression

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 53


State 39

   35 expression: INTLITERAL •

    $default  reduce using rule 35 (expression)


State 40

   34 expression: ID •

    $default  reduce using rule 34 (expression)


State 41

   19 statement: WHILE LPAREN expression • DPAREN statement
   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    DPAREN          shift, and go to state 54
    MINUSOP         shift, and go to state 55
    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57
    PLUSOP          shift, and go to state 58


State 42

   25 print_item: STRING •

    $default  reduce using rule 25 (print_item)


State 43

   20 statement: PRINT LPAREN print_list • DPAREN SEMICOLON
   23 print_list: print_list • COMMA print_item

    DPAREN  shift, and go to state 59
    COMMA   shift, and go to state 60


State 44

   22 print_list: print_item •

    $default  reduce using rule 22 (print_list)


State 45

   24 print_item: expression •
   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    MINUSOP         shift, and go to state 55
    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57
    PLUSOP          shift, and go to state 58

    $default  reduce using rule 24 (print_item)


State 46

   26 read_list: ID •

    $default  reduce using rule 26 (read_list)


State 47

   21 statement: READ LPAREN read_list • DPAREN SEMICOLON
   27 read_list: read_list • COMMA ID

    DPAREN  shift, and go to state 61
    COMMA   shift, and go to state 62


State 48

   17 statement: IF LPAREN expression • DPAREN statement ELSE statement
   18          | IF LPAREN expression • DPAREN statement
   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    DPAREN          shift, and go to state 63
    MINUSOP         shift, and go to state 55
    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57
    PLUSOP          shift, and go to state 58


State 49

   15 statement: ID ASSIGNOP expression • SEMICOLON
   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    SEMICOLON       shift, and go to state 64
    MINUSOP         shift, and go to state 55
    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57
    PLUSOP          shift, and go to state 58


State 50

   12 identifier: ID ASSIGNOP expression •
   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    MINUSOP         shift, and go to state 55
    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57
    PLUSOP          shift, and go to state 58

    $default  reduce using rule 12 (identifier)


State 51

    9 identifier_list: identifier_list COMMA identifier •

    $default  reduce using rule 9 (identifier_list)


State 52

   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression
   33           | LPAREN expression • DPAREN

    DPAREN          shift, and go to state 65
    MINUSOP         shift, and go to state 55
    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57
    PLUSOP          shift, and go to state 58


State 53

   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression
   32           | MINUSOP expression •

    $default  reduce using rule 32 (expression)


State 54

   19 statement: WHILE LPAREN expression DPAREN • statement

    LEFTKEY  shift, and go to state 14
    WHILE    shift, and go to state 16
    PRINT    shift, and go to state 17
    READ     shift, and go to state 18
    IF       shift, and go to state 19
    ID       shift, and go to state 20

    statement  go to state 66


State 55

   29 expression: expression MINUSOP • expression

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 67


State 56

   30 expression: expression MULTIPLICATION • expression

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 68


State 57

   31 expression: expression DIVISION • expression

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 69


State 58

   28 expression: expression PLUSOP • expression

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    ID          shift, and go to state 40

    expression  go to state 70


State 59

   20 statement: PRINT LPAREN print_list DPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 71


State 60

   23 print_list: print_list COMMA • print_item

    LPAREN      shift, and go to state 37
    MINUSOP     shift, and go to state 38
    INTLITERAL  shift, and go to state 39
    STRING      shift, and go to state 42
    ID          shift, and go to state 40

    print_item  go to state 72
    expression  go to state 45


State 61

   21 statement: READ LPAREN read_list DPAREN • SEMICOLON

    SEMICOLON  shift, and go to state 73


State 62

   27 read_list: read_list COMMA • ID

    ID  shift, and go to state 74


State 63

   17 statement: IF LPAREN expression DPAREN • statement ELSE statement
   18          | IF LPAREN expression DPAREN • statement

    LEFTKEY  shift, and go to state 14
    WHILE    shift, and go to state 16
    PRINT    shift, and go to state 17
    READ     shift, and go to state 18
    IF       shift, and go to state 19
    ID       shift, and go to state 20

    statement  go to state 75


State 64

   15 statement: ID ASSIGNOP expression SEMICOLON •

    $default  reduce using rule 15 (statement)


State 65

   33 expression: LPAREN expression DPAREN •

    $default  reduce using rule 33 (expression)


State 66

   19 statement: WHILE LPAREN expression DPAREN statement •

    $default  reduce using rule 19 (statement)


State 67

   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   29           | expression MINUSOP expression •
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57

    $default  reduce using rule 29 (expression)


State 68

   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   30           | expression MULTIPLICATION expression •
   31           | expression • DIVISION expression

    $default  reduce using rule 30 (expression)


State 69

   28 expression: expression • PLUSOP expression
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression
   31           | expression DIVISION expression •

    $default  reduce using rule 31 (expression)


State 70

   28 expression: expression • PLUSOP expression
   28           | expression PLUSOP expression •
   29           | expression • MINUSOP expression
   30           | expression • MULTIPLICATION expression
   31           | expression • DIVISION expression

    MULTIPLICATION  shift, and go to state 56
    DIVISION        shift, and go to state 57

    $default  reduce using rule 28 (expression)


State 71

   20 statement: PRINT LPAREN print_list DPAREN SEMICOLON •

    $default  reduce using rule 20 (statement)


State 72

   23 print_list: print_list COMMA print_item •

    $default  reduce using rule 23 (print_list)


State 73

   21 statement: READ LPAREN read_list DPAREN SEMICOLON •

    $default  reduce using rule 21 (statement)


State 74

   27 read_list: read_list COMMA ID •

    $default  reduce using rule 27 (read_list)


State 75

   17 statement: IF LPAREN expression DPAREN statement • ELSE statement
   18          | IF LPAREN expression DPAREN statement •

    ELSE  shift, and go to state 76

    $default  reduce using rule 18 (statement)


State 76

   17 statement: IF LPAREN expression DPAREN statement ELSE • statement

    LEFTKEY  shift, and go to state 14
    WHILE    shift, and go to state 16
    PRINT    shift, and go to state 17
    READ     shift, and go to state 18
    IF       shift, and go to state 19
    ID       shift, and go to state 20

    statement  go to state 77


State 77

   17 statement: IF LPAREN expression DPAREN statement ELSE statement •

    $default  reduce using rule 17 (statement)
